# dlib

./: .ccls-root  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  faceAligner.py  face_aligner.cpp  requirements.txt  rundocker.sh  sealbuild  sealbuildAWS  sealbuild_docker
cluster/: encode_faces.py  encodings.pickle
data/: fourth.xml
data/Trial/: .DSCN1662.JPG.icloud  .DSCN1664.JPG.icloud  .DSCN1666.JPG.icloud
docker/: Dockerfile  README.md  cleanupimgcontainer.sh  dockerinstructions.txt  initializedocker.sh  rundocker.sh
dockerbroken/: docker-compose.yml
docs/: GUI.md  SEARCH.md
imglab/: .ccls  compile_commands.json
imglab/.clangd/index/: cluster.cpp.A31945E06B2F6C0C.idx  cluster.h.42AD07DC4DC59669.idx  common.cpp.56B0E1AC24933A2C.idx  common.h.ED7AEBC5E0768138.idx  convert_idl.cpp.36B0BE29CC754718.idx  convert_idl.h.B7CED7EE7B1A507C.idx  convert_pascal_v1.cpp.E4B667E9A26F9F67.idx  convert_pascal_v1.h.A22EAC730AB278A7.idx  convert_pascal_xml.cpp.D89C8160A4E60602.idx  convert_pascal_xml.h.9F144D19E6845897.idx  flip_dataset.cpp.767AD1EEAC3E3874.idx  flip_dataset.h.A516423E6B627664.idx  main.cpp.814C13745543CFC1.idx  metadata_editor.cpp.ED5AF4A6CA46E9BE.idx  metadata_editor.h.B537731A9FA9C18F.idx
imglab/src/: compile_commands.json  main.cpp  metadata_editor.cpp  metadata_editor.h
include/dlib/gui_widgets/: widgets.cpp  widgets.h  widgets_abstract.h
include/dnn/: CMakeLists.txt  dnn_seal_chip.cpp
run/: 2019.xml  2021.xml  addFolder.py  align  config.txt  final.xml  fourth.xml  lauren.xml  lo.xml  lol.xml  newTest.xml  oldTest.xml  program  temp.xml  test.xml  thirdTest.xml
sealdnn/: compile_commands.json
sealdnn/src/: chipAndAlign.cpp  dnn_seal_chip.cpp  sealFindr.cpp
